# PargonTypes

./: CMakeLists.txt  README.md
Include/Pargon/: Types.h
Include/Pargon/Types/: Color.h  Guid.h  Random.h  Time.h
Source/Core/: Color.cpp  Guid.cpp  Random.cpp  Time.cpp
Source/Win32/: Guid.Win32.cpp  Time.Win32.cpp
